<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.scarlet.u2_ej22_act_pedido_pizza.MainActivity"
    android:background="@color/colorNegro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/fondo_ll_colores_italianos"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL_masa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/fondo_ll_verde"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_masa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_masa"
                    android:textColor="@color/colorNegro" />

                <Spinner
                    android:id="@+id/sp_tipo_masa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_masa"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@drawable/fondo_botones"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="5"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/btn_siguiente"
                    android:textColor="#080808"
                    android:textSize="15dp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tv_tipo_masa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL_ingredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/fondo_ll_gris"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ingredientes"
                    android:textColor="@color/colorNegro" />

                <LinearLayout
                    android:id="@+id/LL_ingrediente1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_1"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_atun" />

                    <CheckBox
                        android:id="@+id/cb_2"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_york" />

                    <CheckBox
                        android:id="@+id/cb_3"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_pollo" />

                    <CheckBox
                        android:id="@+id/cb_4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_ternera" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL_ingredientes2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_5"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_pimiento" />

                    <CheckBox
                        android:id="@+id/cb_6"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_cebolla" />

                    <CheckBox
                        android:id="@+id/cb_7"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_boloñesa" />

                    <CheckBox
                        android:id="@+id/cb_8"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"

                        android:text="@string/cb_carbonara" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_ingredientes"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@drawable/fondo_botones"
                    android:enabled="false"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="5"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/btn_siguiente"
                    android:textColor="#080808"
                    android:textSize="15dp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tv_tipo_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL_tamaño"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/fondo_ll_rojo"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_tamaño"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tamaño"
                    android:textColor="@color/colorNegro" />

                <RadioGroup
                    android:id="@+id/rb_tamaño"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_pequeño"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rb_pequeño" />

                    <RadioButton
                        android:id="@+id/rb_clasico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rb_clasico" />

                    <RadioButton
                        android:id="@+id/rb_familiar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rb_familiar" />
                </RadioGroup>

                <Button
                    android:id="@+id/btn_tamaño"
                    android:enabled="false"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@drawable/fondo_botones"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="5"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/btn_siguiente"
                    android:textColor="#080808"
                    android:textSize="15dp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tv_tipo_tamaño"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
